src/test/ui/proc-macro/attr-invalid-exprs.stderr
error: expected expression, found end of macro arguments
  --> $DIR/attr-invalid-exprs.rs:11:13
   |
LL |     let _ = #[no_output] "Hello, world!";
   |             ^^^^^^^^^^^^

error: macro expansion ignores token `,` and any following
  --> $DIR/attr-invalid-exprs.rs:14:13
   |
LL |     let _ = #[duplicate] "Hello, world!";
   |             ^^^^^^^^^^^^- help: you might be missing a semicolon here: `;`
   |             |
   |             caused by the macro expansion here
   |
   = note: the usage of `duplicate!` is likely invalid in expression context

error: macro expansion ignores token `,` and any following
  --> $DIR/attr-invalid-exprs.rs:23:9
   |
LL |         #[duplicate]
   |         ^^^^^^^^^^^^- help: you might be missing a semicolon here: `;`
   |         |
   |         caused by the macro expansion here
   |
   = note: the usage of `duplicate!` is likely invalid in expression context

error: aborting due to 3 previous errors

